# simple-smp-bot

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  HOSTING.md  README.md  bot.js  package-lock.json  package.json
.github/workflows/: ci.yml
rust-bot/: Cargo.toml  run.sh
rust-bot/src/: main.rs
scripts/: fix-protocol.js
src/: config.js
tests/: config.test.js
